feat: Update button styles and layout in class and subject dialogs for improved UI consistency

--- a/Quizup-Angular-Application/src/app/features/admin/classes-list/classes-list.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/classes-list/classes-list.component.html
@@ -30,8 +30,12 @@
         <td>{{ classItem.createdAt | date }}</td>
         <td>{{ classItem.updatedAt | date }}</td>
         <td class="actions">
-          <button (click)="updateClass(classItem)">Update</button>
-          <button (click)="deleteClass(classItem.id)">Delete</button>
+          <button class="btn btn-primary" (click)="updateClass(classItem)">
+            Update
+          </button>
+          <button class="btn btn-danger" (click)="deleteClass(classItem.id)">
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
