--- a/Quizup-Angular-Application/src/app/features/admin/dialogs/add-class-dialog/add-class-dialog.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/dialogs/add-class-dialog/add-class-dialog.component.html
@@ -1,7 +1,10 @@
-<h2>Add Class</h2>
 <form [formGroup]="classForm">
-  <label for="className">Class Name:</label>
-  <input id="className" formControlName="className" />
+  <h2>Add Class</h2>
+
+  <div class="form-group">
+    <label for="className">Class Name:</label>
+    <input type="text" id="className" formControlName="className" />
+  </div>
 
   <div class="form-group">
     <label for="subjects">Subjects:</label>
@@ -37,6 +40,8 @@
     </div>
   </div>
 
-  <button type="button" (click)="onSave()">Save</button>
-  <button type="button" (click)="onCancel()">Cancel</button>
+  <button type="button" class="btn btn-primary" (click)="onSave()">Save</button>
+  <button type="button" class="btn btn-secondary" (click)="onCancel()">
+    Cancel
+  </button>
 </form>
