--- a/Quizup-Angular-Application/src/app/features/admin/dialogs/add-subject-dialog/add-subject-dialog.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/dialogs/add-subject-dialog/add-subject-dialog.component.html
@@ -1,11 +1,28 @@
-<h2>Add Subject</h2>
 <form>
-  <label for="subjectName">Subject Name:</label>
-  <input id="subjectName" [(ngModel)]="subjectName" name="subjectName" />
+  <h2>Add Subject</h2>
 
-  <label for="subjectCode">Subject Code:</label>
-  <input id="subjectCode" [(ngModel)]="subjectCode" name="subjectCode" />
+  <div>
+    <label for="subjectName">Subject Name:</label>
+    <input
+      type="text"
+      id="subjectName"
+      [(ngModel)]="subjectName"
+      name="subjectName"
+    />
+  </div>
 
-  <button type="button" (click)="onSave()">Save</button>
-  <button type="button" (click)="onCancel()">Cancel</button>
+  <div>
+    <label for="subjectCode">Subject Code:</label>
+    <input
+      type="text"
+      id="subjectCode"
+      [(ngModel)]="subjectCode"
+      name="subjectCode"
+    />
+  </div>
+
+  <button type="button" class="btn btn-primary" (click)="onSave()">Save</button>
+  <button type="button" class="btn btn-secondary" (click)="onCancel()">
+    Cancel
+  </button>
 </form>
