--- a/Quizup-Angular-Application/src/app/features/landing/landing.html
+++ b/Quizup-Angular-Application/src/app/features/landing/landing.html
@@ -31,7 +31,9 @@
     </p>
     <p class="text-xl text-gray-600">Hassle-free. Intuitive. Effective.</p>
 
-    <button class="get-started-button w-fit mt-7">Get Started</button>
+    <button class="get-started-button w-fit mt-7" 
+      routerLink="/auth/login"
+    >Get Started</button>
   </div>
   <div class="w-[40%] h-full flex items-center justify-center">
     <img
