--- a/Quizup-Angular-Application/src/app/features/quiz/pages/explore/quiz-explore-page.component.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/pages/explore/quiz-explore-page.component.html
@@ -1,4 +1,7 @@
 <div>
-  <h2>Find Quizzes</h2>
+  <div class="header">
+    <h2>Find Quizzes</h2>
+    <button id="add-button" routerLink="/quiz/create">Create New Quiz</button>
+  </div>
   <app-quiz-list></app-quiz-list>
 </div>
