--- a/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-detail/quiz-detail-page.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-detail/quiz-detail-page.html
@@ -13,11 +13,21 @@
       <p><strong>Created At:</strong> {{ quiz.createdAt | date: 'short' }}</p>
       <p>
         <strong>Status:</strong>
-        <span
+        <span class="ml-2"
           [ngClass]="{ 'active': quiz.isActive, 'inactive': !quiz.isActive }"
           >{{ quiz.isActive ? 'Active' : 'Inactive' }}</span
         >
       </p>
+
+      @if( quiz.isActive ) {
+        <button class="btn btn-end" (click)="toggleQuizStatus()">
+          End Quiz
+        </button>
+      } @else {
+        <button class="btn btn-start" (click)="toggleQuizStatus()">
+          Activate Quiz
+        </button>
+      }
     </div>
 
     <div class="quiz-questions">
