--- a/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-detail/quiz-detail-page.css
+++ b/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-detail/quiz-detail-page.css
@@ -124,6 +124,39 @@ button:hover {
   color: #fff;
 }
 
+
+.btn {
+  width: fit-content;
+  margin-top: 1rem;
+  padding: 0.4rem 0.8rem;
+  border: none;
+  border-radius: 6px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn-end{
+  background-color: #e74c3c;
+  color: #fff;
+}
+
+.btn-end:hover {
+  background-color: #c0392b;
+  color: #fff;
+} 
+
+.btn-start {
+  background-color: #2ecc71;
+  color: #fff;
+}
+
+.btn-start:hover {
+  background-color: #27ae60;
+  color: #fff;
+}
+
 table {
   width: 100%;
   margin-top: 20px;
