--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.css
@@ -56,6 +56,16 @@ a:hover {
   transition: all 0.3s ease;
 }
 
+.signup-button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #2e2932;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
 .login-button:hover {
   border: 1px solid #2d2431;
 }
